# esp-freertos-coremqtt

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Kconfig  README.md  component.mk
examples/tls_basic/: CMakeLists.txt  Makefile  README.md
examples/tls_basic/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  tls_basic_main.c
examples/tls_basic/main/utilities/: BasicTLSMQTTExample.c  demo_config.h
examples/tls_mutual_auth/: AWS_README.md  Makefile  README.md  esp32-c3.md  esp32-s2.md
examples/tls_mutual_auth/aws-readme/: esp32-c3.md  esp32-s2.md
examples/tls_mutual_auth/main/: CMakeLists.txt  component.mk  root_cert_auth.pem
examples/tls_mutual_auth/main/utilities/: MutualAuthMQTTExample.c
port/exponential_backoff/: exponential_backoff.c
port/include/: core_mqtt_config.h
port/platform/: platform.c  platform.h
